libpoke: check that asm templates are constant
2022-10-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_ASM_STMT_EXPANDED_TEMPLATE): Likewise.
	(PKL_AST_ASM_EXP_EXPANDED_TEMPLATE): Remove.
	* libpoke/pkl-ast.c: Remove expanded_template.
	* libpoke/pkl-trans.c (pkl_trans2_ps_asm_stmt): Remove handler.
	(pkl_trans2_ps_asm_exp): Likewise.
	* libpoke/pkl-asm.c (pkl_asm_from_string): Expand the given
	template before assembling.
	* testsuite/poke.pkl/asm-exp-diag-5.pk: New test.
	* testsuite/poke.pkl/asm-stmt-diag-5.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -748,6 +748,7 @@ EXTRA_DIST = \
   poke.pkl/asm-exp-diag-2.pk \
   poke.pkl/asm-exp-diag-3.pk \
   poke.pkl/asm-exp-diag-4.pk \
+  poke.pkl/asm-exp-diag-5.pk \
   poke.pkl/asm-stmt-1.pk \
   poke.pkl/asm-stmt-2.pk \
   poke.pkl/asm-stmt-3.pk \
@@ -758,6 +759,7 @@ EXTRA_DIST = \
   poke.pkl/asm-stmt-diag-2.pk \
   poke.pkl/asm-stmt-diag-3.pk \
   poke.pkl/asm-stmt-diag-4.pk \
+  poke.pkl/asm-stmt-diag-5.pk \
   poke.pkl/array-integ-1.pk \
   poke.pkl/array-integ-2.pk \
   poke.pkl/array-integ-3.pk \
