libpoke: fix bounds in array types generated by array mapper and constructor
2022-10-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (array_mapper): Install the sbound in the
	new array type as an offset and not a bit-offset.
	(array_constructor): Likewise, and do not traverse the array type
	IN_TYPE to actually get a bounder.
	* testsuite/poke.pkl/array-bound-1.pk: New test.
	* testsuite/poke.pkl/array-bound-4.pk: Likewise.
	* testsuite/poke.pkl/array-bound-3.pk: Likewise.
	* testsuite/poke.pkl/array-bound-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -703,6 +703,10 @@ EXTRA_DIST = \
   poke.pkl/apush-diag-3.pk \
   poke.pkl/array-1.pk \
   poke.pkl/array-2.pk \
+  poke.pkl/array-bound-1.pk \
+  poke.pkl/array-bound-2.pk \
+  poke.pkl/array-bound-3.pk \
+  poke.pkl/array-bound-4.pk \
   poke.pkl/array-bound-diag-1.pk \
   poke.pkl/array-diag-1.pk \
   poke.pkl/array-diag-3.pk \
