pkl: provide access to SELF in methods
2022-10-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (pushlevel_args): Register a named argument
	"SELF" instead of a dummy.
	* testsuite/poke.pkl/self-1.pk: New test.
	* testsuite/poke.pkl/self-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* doc/poke.texi (Methods): Mention the SELF variable.
	(Struct Methods): Likewise.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2173,6 +2173,8 @@ EXTRA_DIST = \
   poke.pkl/scons-union-method-2.pk \
   poke.pkl/scons-union-method-3.pk \
   poke.pkl/scons-union-method-4.pk \
+  poke.pkl/self-1.pk \
+  poke.pkl/self-2.pk \
   poke.pkl/set-endian-1.pk \
   poke.pkl/set-ios-1.pk \
   poke.pkl/sizeof-1.pk \
