pkl-ast: Avoid double-frees by keeping track of frees
Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=25379

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -82,11 +82,14 @@ libpoke_modules="
   gettime
   intprops
   isatty
+  linkedhash-set
   mkstemp
   nanosleep
   printf-posix
   random
   secure_getenv
+  set
+  xset
   snprintf
   stdarg
   stdbool
