pkl: fix priority of AS and ISA
2022-10-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: Make unary operators take precedence over AS
	and ISA.
	* testsuite/poke.pkl/cast-integers-19.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1047,6 +1047,7 @@ EXTRA_DIST = \
   poke.pkl/cast-integers-16.pk \
   poke.pkl/cast-integers-17.pk \
   poke.pkl/cast-integers-18.pk \
+  poke.pkl/cast-integers-19.pk \
   poke.pkl/cast-int-struct-1.pk \
   poke.pkl/cast-int-struct-2.pk \
   poke.pkl/cast-int-struct-3.pk \
