pkl: fix boundaries checking when trimming empty arrays
2022-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.pks (atrim): Fix boundaries checking for empty
	arrays.
	* testsuite/poke.pkl/trim-36.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2415,6 +2415,7 @@ EXTRA_DIST = \
   poke.pkl/trim-33.pk \
   poke.pkl/trim-34.pk \
   poke.pkl/trim-35.pk \
+  poke.pkl/trim-36.pk \
   poke.pkl/trim-diag-1.pk \
   poke.pkl/trim-diag-2.pk \
   poke.pkl/trim-diag-3.pk \
