pkl: do not ever mark EXP expressions as literals
These expressions are not (for the time being) constant-folded.

2022-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans2_ps_exp): Do not assume EXP
	expressions will be constant-folded.
	* libpoke/pkl-fold.c (OP_BINARY_III): Add a note regarding the
	workaround in pkl_trans2_ps_exp.
	* testsuite/poke.pkl/pow-folding-workaround.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1900,6 +1900,7 @@ EXTRA_DIST = \
   poke.pkl/pos-offsets-1.pk \
   poke.pkl/pow-diag-1.pk \
   poke.pkl/pow-diag-2.pk \
+  poke.pkl/pow-folding-workaround.pk \
   poke.pkl/pow-integers-1.pk \
   poke.pkl/pow-integers-2.pk \
   poke.pkl/pow-integers-3.pk \
