pkl: Fix mapper for integral unions
2022-11-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Handle integral unions.
	* testsuite/poke.map/maps-int-union-6.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -307,6 +307,7 @@ EXTRA_DIST = \
   poke.map/maps-int-union-4.pk \
   poke.map/maps-int-union-3.pk \
   poke.map/maps-int-union-5.pk \
+  poke.map/maps-int-union-6.pk \
   poke.map/maps-ios-1.pk \
   poke.map/maps-ios-2.pk \
   poke.map/maps-ios-3.pk \
