testsuite: add a few integral union mapping tests
2022-11-11  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.map/maps-unions-17.pk: New test.
	* testsuite/poke.map/maps-unions-18.pk: Likewise.
	* testsuite/poke.map/maps-unions-19.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -545,6 +545,9 @@ EXTRA_DIST = \
   poke.map/maps-unions-14.pk \
   poke.map/maps-unions-15.pk \
   poke.map/maps-unions-16.pk \
+  poke.map/maps-unions-17.pk \
+  poke.map/maps-unions-18.pk \
+  poke.map/maps-unions-19.pk \
   poke.map/maps-unions-method-1.pk \
   poke.map/maps-unions-method-2.pk \
   poke.map/maps-unions-method-3.pk \
