mingw portability fix
Add a new header jitter/jitter-early-header.h , to be included *before* standard
header, to fix some dump platform quirk that is only relevant on mingw -- likely
only on some mingw configurations.

I am not convinced that I should bother Jitter users because of this.  The
current workaround suffices for Jitter-generated code.

I am currently inclined to say that users wishing to use standard features in
their code should be prepared to initialise their code to allow for that, before
using standard-compliant external features.

* jitter/jitter-early-header.h: New file.

* Makefile.am (jitterinclude_HEADERS, SOURCES_FOR_LIBJITTER): Add new header.

* jitter/jitter-print.c: Include new header.
* templates/vm-main.c: Likewise.
* templates/vm.h: Likewise.
* templates/vm1.c: Likewise.
* jitterc/jitterc-generate.c (jitterc_emit_executor): Include new header in
generated code (vm2.c).

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in .
-# Copyright (C) 2016-2020 Luca Saiu
-# Updated in 2021 and 2022 by Luca Saiu
+# Copyright (C) 2016-2020, 2022 Luca Saiu
+# Updated in 2021 by Luca Saiu
 # Written by Luca Saiu
 
 # This file is part of GNU Jitter.
@@ -348,6 +348,7 @@ jitterinclude_HEADERS += \
   jitter/jitter-arithmetic.h \
   jitter/jitter-bitwise.h \
   jitter/jitter-cpp.h \
+  jitter/jitter-early-header.h \
   jitter/jitter-fatal.h \
   jitter/jitter-malloc.h \
   jitter/jitter-dynamic-buffer.h \
@@ -581,6 +582,7 @@ EXTRA_DIST += $(JITTER_TEMPLATES)
 # variable; see the comments in "Native-code libjitter sources for supported
 # architectures" below.
 SOURCES_FOR_LIBJITTER = \
+  jitter/jitter-early-header.h \
   jitter/jitter.c jitter/jitter.h \
   jitter/jitter-c-compiler-version.h \
   jitter/jitter-instruction.c jitter/jitter-instruction.h \
