pickles: add pickles for PCAP, UUID and RedoxFS
2022-11-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/uuid.pk: New pickle.
	* pickles/redoxfs.pk: Likewise.
	* pickles/pcap.pk: Likewise.
	* testsuite/poke.pickles/uuid-test.pk: New test.
	* testsuite/poke.pickles/pcap-test.pk: Likewise.
	* testsuite/poke.pickles/redoxfs-test.pk: Likewise.
	* pickles/Makefile.am (dist_pickles_DATA): Update.
	* testsuite/Makefile.am (EXTRA_DIST): Likewise.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -606,6 +606,9 @@ EXTRA_DIST = \
   poke.pickles/id3v1-test.pk \
   poke.pickles/rgb24-test.pk \
   poke.pickles/elf-test.pk \
+  poke.pickles/uuid-test.pk \
+  poke.pickles/redoxfs-test.pk \
+  poke.pickles/pcap-test.pk \
   poke.pkl/pkl.exp \
   poke.pkl/postincr-1.pk \
   poke.pkl/postincr-2.pk \
