pickles: rename ctf-frame.pk to sframe.pk and refresh it
CTF Frame format has been renamed to SFrame: the Simple Frame format.
The support is now present in upstream binutils.  This patch does the
renaming and updates the pickle to match the current state of the
specification.

2022-11-24  Indu Bhagat  <indu.bhagat@oracle.com>

	* pickles/Makefile.am (dist_pickles_DATA): Remove CTF Frame
	  pickles and add SFrame ones instead.
	* pickles/ctf-frame.pk: Remove.
	* pickles/ctf-frame-dump.pk: Rename from ..
	* pickles/sframe-dump.pk: Rename to ..
	* pickles/sframe.pk: Add new pickle.
	* testsuite/Makefile.am (EXTRA_DIST): Add the new test.
	* testsuite/poke.pickles/sframe-test.pk: New test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -600,6 +600,7 @@ EXTRA_DIST = \
   poke.pickles/openpgp-test.pk \
   poke.pickles/pe-test.pk \
   poke.pickles/riscv-test.pk \
+  poke.pickles/sframe-test.pk \
   poke.pickles/ustar-test.pk \
   poke.pickles/color-test.pk \
   poke.pickles/mbr-test.pk \
