do not macroexpand directory names (contributed by Arsen Arsenović)
This avoids tokens that could coincidentally appear in paths (such as ``unix''
or ``i386'') getting expanded erroneously and breaking the directory paths.

	* jitterc/jitterc-main.c (JITTERC_DEFAULT_FLAG_DIRECTORY): Do not
	stringify.
	(JITTERC_DEFAULT_TEMPLATE_DIRECTORY): Ditto.
	* Makefile.am (-DJITTER_TEMPLATEDIR): Define as a string.
	(-DJITTER_FLAGDIR): Ditto.

Fix contributed by Arsen Arsenović, committed by Luca Saiu.

--- a/Makefile.am
+++ b/Makefile.am
@@ -116,8 +116,8 @@ endif # JITTER_SUBPACKAGE
 # overridden with a command-line option) to access template files but the prefix
 # is only known very late, at make time.
 CPPFLAGS_FOR_PATHS = \
-  -DJITTER_FLAGDIR=$(flagdir) \
-  -DJITTER_TEMPLATEDIR=$(templatedir)
+  -DJITTER_FLAGDIR=\"$(flagdir)\" \
+  -DJITTER_TEMPLATEDIR=\"$(templatedir)\"
 
 # FIXME: I probably should do the same for headers.
 # jitterincludedir = $(includedir)/$(PACKAGE)/$(VERSION)
