--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -192,7 +192,7 @@ bootstrap_option_hook ()
   option=$1
   case $option in
   --jitter-srcdir=*)
-  JITTER_SRCDIR=${option#--jitter-srcdir=}; return 0;;
+  export JITTER_SRCDIR=${option#--jitter-srcdir=}; return 0;;
   esac
 
   return 1;
@@ -201,11 +201,11 @@ bootstrap_option_hook ()
 bootstrap_print_option_usage_hook ()
 {
   cat <<EOF
- --jitter-srcdir=DIRNAME  specify the local directory where jitter
-                          sources reside.  Use this if you already
-                          have jitter sources on your machine, and
-                          do not want to waste your bandwidth downloading
-                          them again.
+  --jitter-srcdir=DIRNAME  specify the local directory where jitter
+                           sources reside.  Use this if you already
+                           have jitter sources on your machine, and
+                           do not want to waste your bandwidth downloading
+                           them again.
 EOF
 }
 
@@ -213,20 +213,12 @@ EOF
 # Poke's configure.ac requires the Autoconf macros to be copied from Jitter.
 bootstrap_post_import_hook ()
 {
-  $use_git || test -d "$JITTER_SRCDIR" \
-    || die "Error: --no-git requires --jitter-srcdir"
-
+  : "${JITTER_SRCDIR:=jitter}"  # A reasonable default.
   # create INSTALL.generic file
   "${GNULIB_SRCDIR}"/gnulib-tool --copy-file doc/INSTALL INSTALL.generic
 
   # create gl-libpoke
   "${GNULIB_SRCDIR}"/gnulib-tool --import --lib=libgnu --source-base=gl-libpoke --m4-base=m4/libpoke --doc-base=doc --aux-dir=build-aux --no-conditional-dependencies --libtool --without-tests --macro-prefix=libpoke ${libpoke_modules}
-
-  if $use_git && test -d .git && check_exists git; then
-    echo 'Updating the Jitter submodule'
-    git submodule update --init -- ./jitter
-    JITTER_SRCDIR=jitter
-  fi
 
   echo 'Bootstrapping Jitter'
   (
@@ -236,7 +228,7 @@ bootstrap_post_import_hook ()
     GNULIB_SRCDIR=$(cd "${GNULIB_SRCDIR}"; pwd)
     # Bootstrap Jitter from its source directory.  The script must be executed
     # there.
-    cd "${JITTER_SRCDIR}"
+    cd "${JITTER_SRCDIR}" || die "Is your JITTER_SRCDIR wrong?"
     ./bootstrap --gnulib-srcdir="${GNULIB_SRCDIR}" --no-git
   ) || exit $?
 
@@ -263,5 +255,14 @@ bootstrap_post_import_hook ()
   # Set up saner diff order
   if ! (git config --get diff.orderFile) >/dev/null 2>&1; then
      git config diff.orderFile etc/git.orderfile
+  fi
+}
+
+# We should pull Jitter right after pulling gnulib.
+bootstrap_post_pull_hook ()
+{
+  if $use_git && test -d .git && check_exists git; then
+    echo 'Updating the Jitter submodule'
+    git submodule update --init -- ./jitter
   fi
 }
