pickles: add new pickle for floating-point numbers
This commit adds a rudimentary pickle for working with
floating-point numbers.  The pickle and tests were initially
written by apache2.

2023-01-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/ieee754.pk: New pickle for IEEE 754 floating-point
	numbers based on initial code from apache2.
	* pickles/Makefile.am (dist_pickles_DATA): Add new pickle.
	* testsuite/poke.pickles/ieee754-test.pk: New test.
	* testsuite/Makefile.am (EXTRAD_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -610,6 +610,7 @@ EXTRA_DIST = \
   poke.pickles/uuid-test.pk \
   poke.pickles/redoxfs-test.pk \
   poke.pickles/pcap-test.pk \
+  poke.pickles/ieee754-test.pk \
   poke.pkl/pkl.exp \
   poke.pkl/postincr-1.pk \
   poke.pkl/postincr-2.pk \
