utils: adapt pk-elfextractor to new semantics of operator `in'
2023-01-11  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/pk-elfextractor.in: Update to new semantics of `in'
	operator.

--- a/utils/pk-elfextractor.in
+++ b/utils/pk-elfextractor.in
@@ -21,7 +21,7 @@
 
 load elf;
 
-if (!(argv'length in [1,2]))
+if (!(argv'length in [1UL,2UL]))
   {
     print "Usage: elfextractor FILE [SECTION_NAME]\n";
     exit (1);
