pickles: add pickle for pdap (poked application protocol)
2023-01-19  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/pdap.pk: New pickle for "PokeD Application Protocol".
	* testsuite/poke.pickles/pdap-test.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -611,6 +611,7 @@ EXTRA_DIST = \
   poke.pickles/redoxfs-test.pk \
   poke.pickles/pcap-test.pk \
   poke.pickles/ieee754-test.pk \
+  poke.pickles/pdap-test.pk \
   poke.pkl/pkl.exp \
   poke.pkl/postincr-1.pk \
   poke.pkl/postincr-2.pk \
