pickles: add pdap.pk to dist_pickles_DATA
* pickles/Makefile.am (dist_pickles_DATA): Add pdap.pk.

--- a/pickles/Makefile.am
+++ b/pickles/Makefile.am
@@ -26,4 +26,4 @@ dist_pickles_DATA = elf-common.pk elf-64.pk elf-32.pk elf.pk ctf.pk ctf-dump.pk 
                     openpgp.pk search.pk riscv.pk coff.pk coff-i386.pk coff-aarch64.pk \
                     pe.pk pe-amd64.pk pe-arm.pk pe-arm64.pk pe-i386.pk pe-ia64.pk \
                     pe-m32r.pk pe-mips.pk pe-ppc.pk pe-sh3.pk pe-riscv.pk pe-debug.pk \
-		    uuid.pk redoxfs.pk pcap.pk ieee754.pk
+		    uuid.pk redoxfs.pk pcap.pk ieee754.pk pdap.pk
