pkl: disallow constructing non-empty arrays of `any' values without initial value
2023-01-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-anal.c (pkl_anal1_ps_cons): Constructing non-empty
	arrays of `any' without initial values is not supported.
	* testsuite/poke.pkl/acons-diag-9.pk: New test.
	* testsuite/poke.pkl/acons-diag-10.pk: Likewise.
	* testsuite/poke.pkl/acons-13.pk: Likewise.
	* testsuite/poke.pkl/acons-14.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -643,6 +643,8 @@ EXTRA_DIST = \
   poke.pkl/acons-diag-6.pk \
   poke.pkl/acons-diag-7.pk \
   poke.pkl/acons-diag-8.pk \
+  poke.pkl/acons-diag-9.pk \
+  poke.pkl/acons-diag-10.pk \
   poke.pkl/acons-fun-1.pk \
   poke.pkl/acons-fun-2.pk \
   poke.pkl/acons-1.pk \
@@ -656,6 +658,8 @@ EXTRA_DIST = \
   poke.pkl/acons-9.pk \
   poke.pkl/acons-11.pk \
   poke.pkl/acons-12.pk \
+  poke.pkl/acons-13.pk \
+  poke.pkl/acons-14.pk \
   poke.pkl/add-arrays-1.pk \
   poke.pkl/add-arrays-2.pk \
   poke.pkl/add-arrays-3.pk \
