pkl: fix array constructor with zero-sized element types and sbound > 0
Code like this was triggering infinite loops in the array constructor:

  any[3](10);
  type Fn = ()void;
  Fn[2#B]();

2023-01-22  Jose E. Marchesi  <jemarch@termi>

	* libpoke/pkl-gen.pks (array_constructor): Support element types
	of size 0 with sbound > 0.
	* testsuite/poke.pkl/acons-15.pk: New test.
	* testsuite/poke.pkl/acons-16.pk: Likewise.
	* testsuite/poke.pkl/acons-17.pk: Likewise.
	* testsuite/poke.pkl/acons-18.pk: Likewise.
	* testsuite/poke.pkl/acons-19.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -660,6 +660,11 @@ EXTRA_DIST = \
   poke.pkl/acons-12.pk \
   poke.pkl/acons-13.pk \
   poke.pkl/acons-14.pk \
+  poke.pkl/acons-15.pk \
+  poke.pkl/acons-16.pk \
+  poke.pkl/acons-17.pk \
+  poke.pkl/acons-18.pk \
+  poke.pkl/acons-19.pk \
   poke.pkl/add-arrays-1.pk \
   poke.pkl/add-arrays-2.pk \
   poke.pkl/add-arrays-3.pk \
