testsuite: add a few tests for constructing arrays of strings bounded by size
2023-01-22  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/acons-20.pk: New test.
	* testsuite/poke.pkl/acons-21.pk: Likewise.
	* testsuite/poke.pkl/acons-22.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -665,6 +665,9 @@ EXTRA_DIST = \
   poke.pkl/acons-17.pk \
   poke.pkl/acons-18.pk \
   poke.pkl/acons-19.pk \
+  poke.pkl/acons-20.pk \
+  poke.pkl/acons-21.pk \
+  poke.pkl/acons-22.pk \
   poke.pkl/add-arrays-1.pk \
   poke.pkl/add-arrays-2.pk \
   poke.pkl/add-arrays-3.pk \
