pkl: make computed field setters and getters optional
2023-01-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h: Prototype for pkl_asm_struct_type_method_p.
	Prototype for pkl_asm_get_struct_type_field.
	* libpoke/pkl-ast.c (pkl_asm_get_struct_type_method): New
	function.
	(pkl_asm_get_struct_type_field): Likewise.
	* libpoke/pkl-anal.c (pkl_anal2_ps_struct_ref): New handler.
	(pkl_anal2_ps_ass_stmt): Likewise.
	(pkl_phase_anal2): Register handlers.
	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Do no force
	to define getter and setter methods for computer fields.
	* libpoke/pkl-gen.c (pkl_gen_ps_struct_ref): Raise an exception
	when referring to a computed field with no getter.
	(pkl_gen_pr_ass_stmt): Likewise for the setter.
	* testsuite/poke.pkl/sref-diag-3.pk: New test.
	* testsuite/poke.pkl/computed-19.pk: Likewise.
	* testsuite/poke.pkl/computed-diag-5.pk: Remove.
	* testsuite/poke.pkl/computed-diag-6.pk: Likewise.
	* testsuite/poke.pkl/computed-diag-7.pk: Likewise.
	* testsuite/poke.pkl/ass-diag-10.pk: Likewise.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -876,6 +876,7 @@ EXTRA_DIST = \
   poke.pkl/ass-diag-7.pk \
   poke.pkl/ass-diag-8.pk \
   poke.pkl/ass-diag-9.pk \
+  poke.pkl/ass-diag-10.pk \
   poke.pkl/ass-function-1.pk \
   poke.pkl/ass-offset-1.pk \
   poke.pkl/ass-struct-int-1.pk \
@@ -1148,9 +1149,6 @@ EXTRA_DIST = \
   poke.pkl/computed-diag-2.pk \
   poke.pkl/computed-diag-3.pk \
   poke.pkl/computed-diag-4.pk \
-  poke.pkl/computed-diag-5.pk \
-  poke.pkl/computed-diag-6.pk \
-  poke.pkl/computed-diag-7.pk \
   poke.pkl/computed-diag-8.pk \
   poke.pkl/computed-diag-9.pk \
   poke.pkl/computed-diag-10.pk \
@@ -1176,6 +1174,7 @@ EXTRA_DIST = \
   poke.pkl/computed-16.pk \
   poke.pkl/computed-17.pk \
   poke.pkl/computed-18.pk \
+  poke.pkl/computed-19.pk \
   poke.pkl/cond-exp-diag-1.pk \
   poke.pkl/cond-exp-diag-2.pk \
   poke.pkl/cond-exp-diag-3.pk \
@@ -2358,6 +2357,7 @@ EXTRA_DIST = \
   poke.pkl/sref-5.pk \
   poke.pkl/sref-diag-1.pk \
   poke.pkl/sref-diag-2.pk \
+  poke.pkl/sref-diag-3.pk \
   poke.pkl/string-diag-1.pk \
   poke.pkl/string-diag-2.pk \
   poke.pkl/string-multiline-1.pk \
