--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1522,6 +1522,7 @@ EXTRA_DIST = \
   poke.pkl/get-endian-1.pk \
   poke.pkl/get-ios-1.pk \
   poke.pkl/get-ios-2.pk \
+  poke.pkl/get-time-1.pk \
   poke.pkl/getenv-1.pk \
   poke.pkl/getenv-2.pk \
   poke.pkl/gt-arrays-diag-1.pk \
