pkl: rename `get_time' to `gettime'
2023-01-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-rt.pk (get_time): Renamed to `gettime'.
	* pickles/time.pk (gettimeofday): s/get_time/gettime/.
	* testsuite/poke.pkl/get-time-1.pk: Removed.
	* testsuite/poke.pkl/gettime-1.pk: Added.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1526,9 +1526,9 @@ EXTRA_DIST = \
   poke.pkl/get-endian-1.pk \
   poke.pkl/get-ios-1.pk \
   poke.pkl/get-ios-2.pk \
-  poke.pkl/get-time-1.pk \
   poke.pkl/getenv-1.pk \
   poke.pkl/getenv-2.pk \
+  poke.pkl/gettime-1.pk \
   poke.pkl/gt-arrays-diag-1.pk \
   poke.pkl/gt-functions-diag-1.pk \
   poke.pkl/gt-functions-diag-2.pk \
